# pianobar-webui

./: .gitignore  README.md  TODO.txt  convert_events.py  create_venv.sh  recorded_events.txt  requirements.txt  run.sh
.github/workflows/: codeql-analysis.yml
pianobar-socket/: setup.cfg
pianobar-socket/pianobarsocket/: handle_events.py  run.py  settings.py
pianobar-socket/pianobarsocket_simulators/: simulate_events.py
pianobar-websocket/: setup.cfg
pianobar-websocket-python/pianobarsocket/websocket/: json_rpc.py  websocket.py
pianobar-websocket-python/pianobarsocket_simulators/: simulate_events.py
pianobar-websocket/pianobarsocket/: handle_events.py  settings.py
pianobar-websocket/pianobarsocket/websocket/: event_receiver.py  json_rpc.py  websocket.py
pianobar_socket/: setup.cfg
pianobar_webserver/: Cargo.toml
pianobar_webserver/src/: config.rs  default_config.rs  event_handler.rs  event_receiver.rs  lib.rs  main.rs  ui_state.rs  websocket.rs  websocket_connection.rs
pianobar_webserver/src/utils/: cancel_signal.rs  mod.rs
pianobar_webui/: .gitignore  package-lock.json  package.json  tsconfig.json
pianobar_webui/public/: fillscreen.css  index.html  manifest.json
pianobar_webui/src/: App.tsx  config.ts  index.css  index.tsx  serviceWorker.ts
pianobar_webui/src/app/: store.js  store.ts
pianobar_webui/src/features/: rootReducer.js  rootReducer.ts  rootSaga.js  rootSaga.ts
pianobar_webui/src/features/counter/: Counter.js  Counter.tsx  counterSaga.js  counterSaga.ts  counterSelectors.ts  (+2 more)
scripts/: add_hooks_to_pianobar.sh  create_venv.sh
(+29 files in other folders)
