[metadata]
name = pianobar-socket
version = 0.0.1
description = Pianobar JSON-RPC websocket wrapper

[options]
install_requires =


[options.entry_points]
console_scripts =
    pianobar-websocket = pianobarsocket.run:run
    pianobar-websocket-simulate-events = pianobarsocket_simulators.simulate_events:run
    pianobar-websocket-handle-events = pianobarsocket.handle_events:run