[package]
name = "pianobar_webserver"
version = "0.1.0"
authors = ["Finomnis <finomnis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
warp = "0.3.0"
log = "0.4.14"
env_logger = "0.8.3"
anyhow = "1.0.38"
futures = "0.3.13"
structopt = "0.3.21"
jsonrpc-core = "17.0.0"
serde_json = "1.0.64"
serde = {version="1.0.124", features = ["derive"]}
const_format = "0.2.13"